refactor: add constant package and update constructors (#42)
* feat: update util package

* feat: add error code list

* feat: add constants and update constructors

* chore: change path